# opengl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/glad/: glad.h
src/: glad.c  main.cpp  shaders.h
src/exercises/hello_triangle/: 1.cpp  2.cpp  3.cpp
src/exercises/shaders/: 1.vs  2.vs
src/exercises/shaders/3/: fragment.fs  vertex.vs
src/headers/: shaders.h
src/shaders/: firstFragmentShader.glsl  firstVertexShader.glsl
